# pico-hid-msc

./: CMakeLists.txt  hid_msc.c  pico_sdk_import.cmake
.github/workflows/: build.yml
